--- a/BlogPostCompanyProject/requirements.txt
+++ b/BlogPostCompanyProject/requirements.txt
@@ -1,41 +1,34 @@
-alembic==0.9.9
-bcrypt==3.1.4
-blinker==1.4
-certifi==2018.1.18
-cffi==1.11.5
-chardet==3.0.4
-click==6.7
-Flask==1.0.2
-Flask-Bcrypt==0.7.1
-Flask-Dance==0.14.0
-Flask-DebugToolbar==0.10.1
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Migrate==2.1.1
-Flask-OAuth==0.12
-Flask-OAuthlib==0.9.4
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-httplib2==0.11.3
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.10
-lazy==1.3
-Mako==1.0.7
-MarkupSafe==1.0
-oauth2==1.9.0.post1
-oauthlib==2.0.7
-Pillow==5.1.0
-pycparser==2.18
-python-dateutil==2.7.2
-python-editor==1.0.3
-requests==2.18.4
-requests-oauthlib==0.8.0
-six==1.11.0
-SQLAlchemy==1.2.6
-SQLAlchemy-Utils==0.33.2
-urllib3==1.22
-URLObject==2.4.3
-Werkzeug==0.14.1
-wincertstore==0.2
-WTForms==2.1
+alembic==1.8.0
+bcrypt==3.2.2
+certifi==2022.5.18.1
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.4
+dnspython==2.2.1
+docutils==0.18.1
+email-validator==1.2.1
+Flask==2.1.2
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.1
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
+greenlet==1.1.2
+idna==3.3
+importlib-metadata==4.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Kivy==2.1.0
+Kivy-Garden==0.1.5
+Mako==1.2.0
+MarkupSafe==2.1.1
+Pillow==9.1.1
+pycparser==2.21
+Pygments==2.12.0
+requests==2.27.1
+SQLAlchemy==1.4.37
+urllib3==1.26.9
+Werkzeug==2.1.2
+WTForms==3.0.1
+zipp==3.8.0
